# svg-gear-generator

./: CNAME  dprint.json  index.html  theme-dark-raw.css  theme-dark.css  theme-light-raw.css  theme-light.css
.github/workflows/: deploy.yml
assets/: index.2975a3d7.js  index.9c8d25b5.js  index.ef3f1f8d.css  svg_gear_generator_bg.478cd37c.wasm
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  path.rs  vec.rs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.svelte  app.scss  stores.ts
web/src/lib/: NavBar.svelte  SliderWithField.svelte
web/src/theme/: _shared.scss  _smui-theme.scss
web/src/theme/dark/: _smui-theme.scss
